--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,6 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
-    # snippet: studio-rpc-usb-uart
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: corne_right
